# sayable

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: tag_train.csv
scripts/: train_tag_model.py
src/sayable/: __init__.py  classifier.py  cli.py  config.py  normalizer.py  tagger.py
tests/: test_normalizer.py  test_tagger.py
