[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sayable"
version = "0.1.0"
description = "Make text sayable for TTS engines (Chatterbox Turbo friendly)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
sayable = "sayable.cli:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["sayable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
